--- a/FMIRatingsAPI/FMIRatingsAPI/bin/FMIRatingsAPI.dll.config
+++ b/FMIRatingsAPI/FMIRatingsAPI/bin/FMIRatingsAPI.dll.config
@@ -9,11 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DatabaseConnectionString" connectionString="Data Source=46.249.69.142,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-FMIRatingsAPI-20141229105246;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FMIRatingsAPI-20141229105246.mdf"
-      providerName="System.Data.SqlClient" />
-    <add name="FMIRatingsContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229105821; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229105821.mdf"
+		<!--<add name="DatabaseConnectionString" connectionString="Data Source=46.249.69.142,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True"-->
+		 providerName="System.Data.SqlClient" />
+    <add name="FMIRatingsContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229132326; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229132326.mdf"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
