--- a/FMIRatingsAPI/FMIRatingsAPI/bin/FMIRatingsAPI.dll.config
+++ b/FMIRatingsAPI/FMIRatingsAPI/bin/FMIRatingsAPI.dll.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -11,8 +11,7 @@
   <connectionStrings>
 		<!--<add name="DatabaseConnectionString" connectionString="Data Source=46.249.69.142,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True"
 		 providerName="System.Data.SqlClient" />-->
-    <add name="FMIRatingsContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229132326; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229132326.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="FMIRatingsContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229132326; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229132326.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
