--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -161,6 +161,9 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CourseCommentsController.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\TeacherCommentsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
