--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\TeacherCommentsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
+    <Compile Include="Controllers\VoteForCourseController.cs" />
     <Compile Include="Controllers\WebApi.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\WebApiModels.cs" />
@@ -174,17 +175,28 @@
     <Compile Include="Migrations\201501012150492_Initial.Designer.cs">
       <DependentUpon>201501012150492_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501062216334_Initial1.cs" />
+    <Compile Include="Migrations\201501062216334_Initial1.Designer.cs">
+      <DependentUpon>201501062216334_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CommentForTeacher.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CriterionForCourse.cs" />
+    <Compile Include="Models\CriterionForTeacher.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
     <Compile Include="Models\DatabaseContext.cs" />
     <Compile Include="DAL\FMIRatingsContext.cs" />
+    <Compile Include="Models\DTO\AvarageDTO.cs" />
     <Compile Include="Models\DTO\CommentForTeacherDTO.cs" />
     <Compile Include="Models\DTO\CourseDTO.cs" />
     <Compile Include="Models\DTO\TeacherDTO.cs" />
+    <Compile Include="Models\DTO\VoteForCourseDTO.cs" />
+    <Compile Include="Models\DTO\VoteForTeacherDTO.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Models\TeacherInCourse.cs" />
+    <Compile Include="Models\VoteForCourse.cs" />
+    <Compile Include="Models\VoteForTeacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -300,6 +312,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201501012150492_Initial.resx">
       <DependentUpon>201501012150492_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501062216334_Initial1.resx">
+      <DependentUpon>201501062216334_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
