--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Controllers\TeacherCommentsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\VoteForCourseController.cs" />
     <Compile Include="Controllers\WebApi.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\WebApiModels.cs" />
@@ -183,6 +184,10 @@
     <Compile Include="Migrations\201501061952244_comments.cs" />
     <Compile Include="Migrations\201501061952244_comments.Designer.cs">
       <DependentUpon>201501061952244_comments.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501062216334_Initial1.cs" />
+    <Compile Include="Migrations\201501062216334_Initial1.Designer.cs">
+      <DependentUpon>201501062216334_Initial1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201501081245561_Creating users.cs" />
     <Compile Include="Migrations\201501081245561_Creating users.Designer.cs">
@@ -205,18 +210,25 @@
     <Compile Include="Models\CommentForCourse.cs" />
     <Compile Include="Models\CommentForTeacher.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CriterionForCourse.cs" />
+    <Compile Include="Models\CriterionForTeacher.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
     <Compile Include="Models\DatabaseContext.cs" />
     <Compile Include="DAL\FMIRatingsContext.cs" />
+    <Compile Include="Models\DTO\AvarageDTO.cs" />
     <Compile Include="Models\DTO\CommentDTO.cs" />
     <Compile Include="Models\DTO\CommentForCourseDTO.cs" />
     <Compile Include="Models\DTO\CommentForTeacherDTO.cs" />
     <Compile Include="Models\DTO\CourseDTO.cs" />
     <Compile Include="Models\DTO\TeacherDTO.cs" />
     <Compile Include="Models\DTO\UserDTO.cs" />
+    <Compile Include="Models\DTO\VoteForCourseDTO.cs" />
+    <Compile Include="Models\DTO\VoteForTeacherDTO.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\Teacher.cs" />
     <Compile Include="Models\TeacherInCourse.cs" />
+    <Compile Include="Models\VoteForCourse.cs" />
+    <Compile Include="Models\VoteForTeacher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -335,6 +347,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501061952244_comments.resx">
       <DependentUpon>201501061952244_comments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501062216334_Initial1.resx">
+      <DependentUpon>201501062216334_Initial1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501081245561_Creating users.resx">
       <DependentUpon>201501081245561_Creating users.cs</DependentUpon>
