--- a/FMIRatingsAPI/FMIRatingsAPI/Web.config
+++ b/FMIRatingsAPI/FMIRatingsAPI/Web.config
@@ -9,13 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-		<add name="FMIRatingsContext" 
-		connectionString="Data Source=localhost,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True"
-		providerName="System.Data.SqlClient" />
-
 		<!--<add name="FMIRatingsContext" 
-				 connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229132326; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229132326.mdf" 
-				 providerName="System.Data.SqlClient" />-->
+		connectionString="Data Source=localhost,; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True"
+		providerName="System.Data.SqlClient" />-->
+
+    <add name="FMIRatingsContext" connectionString="Data Source=95.111.16.46,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
