--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\VoteForTeacherController.cs" />
     <Compile Include="Controllers\CourseCommentsController.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -180,6 +181,14 @@
     <Compile Include="Migrations\201501091141394_Initial.cs" />
     <Compile Include="Migrations\201501091141394_Initial.Designer.cs">
       <DependentUpon>201501091141394_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501091449427_New.cs" />
+    <Compile Include="Migrations\201501091449427_New.Designer.cs">
+      <DependentUpon>201501091449427_New.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501091517091_New1.cs" />
+    <Compile Include="Migrations\201501091517091_New1.Designer.cs">
+      <DependentUpon>201501091517091_New1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -320,6 +329,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201501091141394_Initial.resx">
       <DependentUpon>201501091141394_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501091449427_New.resx">
+      <DependentUpon>201501091449427_New.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501091517091_New1.resx">
+      <DependentUpon>201501091517091_New1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
