--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CourseCategoriesController.cs" />
     <Compile Include="Controllers\VoteForTeacherController.cs" />
     <Compile Include="Controllers\CourseCommentsController.cs">
       <SubType>Code</SubType>
@@ -190,11 +191,20 @@
     <Compile Include="Migrations\201501091517091_New1.Designer.cs">
       <DependentUpon>201501091517091_New1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201501091919578_Test.cs" />
+    <Compile Include="Migrations\201501091919578_Test.Designer.cs">
+      <DependentUpon>201501091919578_Test.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201501091934303_CourseCategoryMigration.cs" />
+    <Compile Include="Migrations\201501091934303_CourseCategoryMigration.Designer.cs">
+      <DependentUpon>201501091934303_CourseCategoryMigration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentForCourse.cs" />
     <Compile Include="Models\CommentForTeacher.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\CourseCategory.cs" />
     <Compile Include="Models\CriterionForCourse.cs" />
     <Compile Include="Models\CriterionForTeacher.cs" />
     <Compile Include="Models\DatabaseModels.cs" />
@@ -335,6 +345,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201501091517091_New1.resx">
       <DependentUpon>201501091517091_New1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501091919578_Test.resx">
+      <DependentUpon>201501091919578_Test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201501091934303_CourseCategoryMigration.resx">
+      <DependentUpon>201501091934303_CourseCategoryMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
