--- a/FMIRatingsAPI/FMIRatingsAPI/Web.config
+++ b/FMIRatingsAPI/FMIRatingsAPI/Web.config
@@ -14,6 +14,10 @@
 		providerName="System.Data.SqlClient" />-->
 
     <add name="FMIRatingsContext" connectionString="Data Source=95.111.16.46,1433; Initial Catalog=FMIRatingsDatabase; User ID=sa; Password=samopiss; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+
+	  <!--<add name="FMIRatingsContext"
+connectionString="Data Source=(localdb)\v11.0; Initial Catalog=FMIRatingsContext-20141229132326; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FMIRatingsContext-20141229132326.mdf"
+providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
