--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Authentication\UserPrincipal.cs" />
     <Compile Include="Controllers\CourseCategoriesController.cs" />
+    <Compile Include="Controllers\TeacherDepartmentsController.cs" />
     <Compile Include="Controllers\VoteForTeacherController.cs" />
     <Compile Include="Controllers\CourseCommentsController.cs">
       <SubType>Code</SubType>
@@ -180,21 +181,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201501091141394_Initial.cs" />
-    <Compile Include="Migrations\201501091141394_Initial.Designer.cs" />
-    <Compile Include="Migrations\201501091449427_New.cs" />
-    <Compile Include="Migrations\201501091449427_New.Designer.cs" />
-    <Compile Include="Migrations\201501091517091_New1.cs" />
-    <Compile Include="Migrations\201501091517091_New1.Designer.cs" />
-    <Compile Include="Migrations\201501091653468_Fix.cs" />
-    <Compile Include="Migrations\201501091653468_Fix.Designer.cs">
-      <DependentUpon>201501091653468_Fix.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201501092000184_TeacherDepartmentMigration.cs" />
-    <Compile Include="Migrations\201501092000184_TeacherDepartmentMigration.Designer.cs" />
-    <Compile Include="Migrations\201501101100132_CourseCategoryRelationMigration.cs" />
-    <Compile Include="Migrations\201501101100132_CourseCategoryRelationMigration.Designer.cs">
-      <DependentUpon>201501101100132_CourseCategoryRelationMigration.cs</DependentUpon>
+    <Compile Include="Migrations\201501101247507_InitialMigration.cs" />
+    <Compile Include="Migrations\201501101247507_InitialMigration.Designer.cs">
+      <DependentUpon>201501101247507_InitialMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Comment.cs" />
@@ -213,6 +202,7 @@
     <Compile Include="Models\DTO\CommentForTeacherDTO.cs" />
     <Compile Include="Models\DTO\CourseCategoryDTO.cs" />
     <Compile Include="Models\DTO\CourseDTO.cs" />
+    <Compile Include="Models\DTO\TeacherDepartmentDTO.cs" />
     <Compile Include="Models\DTO\TeacherDTO.cs" />
     <Compile Include="Models\DTO\UserDTO.cs" />
     <Compile Include="Models\DTO\VoteForCourseDTO.cs" />
@@ -336,16 +326,8 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201501091141394_Initial.resx" />
-    <EmbeddedResource Include="Migrations\201501091449427_New.resx" />
-    <EmbeddedResource Include="Migrations\201501091517091_New1.resx" />
-    <EmbeddedResource Include="Migrations\201501091919578_Test.resx" />
-    <EmbeddedResource Include="Migrations\201501092000184_TeacherDepartmentMigration.resx" />
-    <EmbeddedResource Include="Migrations\201501101100132_CourseCategoryRelationMigration.resx">
-      <DependentUpon>201501101100132_CourseCategoryRelationMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201501091653468_Fix.resx">
-      <DependentUpon>201501091653468_Fix.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201501101247507_InitialMigration.resx">
+      <DependentUpon>201501101247507_InitialMigration.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
