--- a/FMIRatingsAPI/FMIRatingsAPI/packages.config
+++ b/FMIRatingsAPI/FMIRatingsAPI/packages.config
@@ -6,6 +6,7 @@
   <package id="jQuery.UI.Combined" version="1.11.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Providers.LocalDb" version="2.0.0" targetFramework="net45" />
@@ -14,6 +15,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
