--- a/FMIRAtingsAndroid/AndroidManifest.xml
+++ b/FMIRAtingsAndroid/AndroidManifest.xml
@@ -17,16 +17,19 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.piss.android.project.activities.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:screenOrientation="portrait">
+            
+        </activity>
+        <activity
+            android:name="com.piss.android.project.activities.LoginActivity"
+            android:label="@string/title_activity_login"
+             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="com.piss.android.project.activities.LoginActivity"
-            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
