Added get user at /api/users

--- a/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
+++ b/FMIRatingsAPI/FMIRatingsAPI/FMIRatingsAPI.csproj
@@ -29,7 +29,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\FMIRatingsAPI.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -212,6 +213,7 @@
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentForCourse.cs" />
     <Compile Include="Models\CommentForTeacher.cs" />
+    <Compile Include="Models\DTO\FileDTO.cs" />
     <Compile Include="Models\File.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\CourseCategory.cs" />
