--- a/FMIRAtingsAndroid/AndroidManifest.xml
+++ b/FMIRAtingsAndroid/AndroidManifest.xml
@@ -5,6 +5,8 @@
     android:versionName="1.0" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -12,19 +14,18 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.Base" >
         <activity
             android:name="com.piss.android.project.activities.MainActivity"
-            android:label="@string/title_activity_main"
-            android:screenOrientation="portrait">
             
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.piss.android.project.activities.LoginActivity"
-            android:label="@string/title_activity_login"
-             android:screenOrientation="portrait" >
+            
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
