--- a/FMIRAtingsAndroid/AndroidManifest.xml
+++ b/FMIRAtingsAndroid/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/app_icon"
+        android:icon="@drawable/brand"
         android:label="@string/app_name"
         android:theme="@style/AppTheme.Base" >
         <activity
